# license-to-play

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  index.html  langgraph.json  pyproject.toml
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: deploy-web.yml
assets/: index-B8Ots_jk.js  index-BKbkLehm.js  index-BRGZpCaH.css  index-DFB30H3f.js  index-Do0BymLY.js
docs/: agent_ui.md  mcp_servers.md
notebooks/: langgraph_math_agent.ipynb  math_agent.ipynb  openai_language_agent.ipynb
src/agno_agent/: README.md  agents.py  agno_docs_agent.py  basic_agent.py  complain_agent.py  config.py  constants.py  fee_agent.py  instructions.py  math_agent.py  observability.py  research_agent.py  server1.py  server2.py  support_agent.py
src/agno_agent/skills/complain/: SKILL.md
src/agno_agent/skills/fee-inquiry/: SKILL.md
src/claude_agent/: basic_agent.py  config.py  streaming_input_agent.py
src/crewai_agent/: agents.py  config.py  crew.py  main.py  tasks.py
src/google_adk_agent/: README.md  agent.py  time_agent.py
src/langgraph_agent/: README.md  graphs.py  math_agent.py  research_agent.py
src/lg_deep_agent/: graphs.py  math_agent.py  research_agent.py
src/lg_deep_agent/utils/: notebooks_utils.py
src/microsoft_agent/: basic_agent.py
src/openai_agent/: config.py  multi_language_agent.py
src/pydantic_ai_agent/: README.md  config.py  research_agent.py
src/test_agno_agent/: conftest.py  test_a2a_client.py  test_agno_remote_agent.py  test_agno_rest_api.py
src/test_external_tools/: test_anthropic.py  test_firecrawl.py  test_langchain.py  test_mcp_client.py  test_olllama.py  test_openai.py  test_perplexity.py  test_tavily.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.css  App.jsx  index.css
