[project]
name = "license-to-play"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "firecrawl-py>=4.12.0",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "loguru>=0.7.3",
    "ollama>=0.6.1",
    "openai>=2.14.0",
    "perplexityai>=0.22.2",
    "python-dotenv>=1.2.1",
    "tavily-python>=0.7.17",
    "universal-pathlib>=0.3.7",
]

[dependency-groups]
dev = [
    "langgraph-cli>=0.4.11",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
